# InsideForest

./: .gitignore  LICENSE  README.es.md  README.md  README.multiclass.md  README.paper.md  __init__.py  labels.py  models.py  pyctogram.py  pyproject.toml  requirements-dev.txt  requirements.txt  rf_results.csv  setup.py  trees.py
InsideForest/: __init__.py  ab_testing.py  cluster_selector.py  continuous_interpreter.py  descrip.py  group_priority.py  inside_forest.py  insideforestclassifier.py  labels.py  legacy_select_clusters.py  metadata.py  models.py  multiclass.py  multiclass_interpreter.py  multiclass_labels.py  multiclass_metrics.py  multiclass_rules.py  region_quality.py  regions.py  trees.py
InsideForest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: _config.yml  benchmarks.html  changelog.html  changelog_es.html  experiments_benchmarks.html  experiments_benchmarks_es.html  faq.html  faq_es.html  glossary.html  how_it_works.html  how_it_works_es.html  index.html  index_es.html  installation.html  installation_es.html  labels_module_evaluation.md  lang.js  license.html  license_es.html  paper.html  performance_tips.html  performance_tips_es.html  quick_api.html  quick_api_es.html  reproducibility.html  reproducibility_es.html  resources.html  roadmap.html  roadmap_es.html  search-data.json  search.js  sidebar.js  style.css  troubleshooting.html
experiments/: ab_test_rule_extraction.py  benchmark.py  benchmark_get_rangos.csv  benchmark_get_rangos.py  benchmark_summary.csv  bottleneck_ab_test.py  branch_metrics_ab_test.py  get_summary_ab_results.csv  get_summary_ab_test.py  insideforest_use_case_multiclass_comparison.py  multiclass_vs_traditional_benchmark.py  pairwise_iou_sparse_ab_results.csv  pairwise_iou_sparse_consistency.csv  rf_param_benchmark.py  run_select_clusters_benchmark.py  select_clusters_ab_benchmark.py  select_clusters_ab_test.csv  select_clusters_chunking_benchmark.py  select_clusters_hyperparam.py  summary_benchmark.py  validate_class_region_clusters.py  validate_group_priority.py  validate_multiclass_real_gain.py  validate_region_clusters.py  validate_regression_regions.py
(+126 files in other folders)
