[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "InsideForest"
version = "0.3.9"
description = "A comprehensive library for describing and analyzing data insights via AI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Jose Carlos Del Valle" }
]
dependencies = [
  "scikit-learn",
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "openai",
  "scipy",
  "tqdm",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jcval94/InsideForest"
Repository = "https://github.com/jcval94/InsideForest.git"

[tool.setuptools.packages.find]
include = ["InsideForest*"]
