[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "InsideForest"
version = "0.4.0"
description = "Supervised forest-based rule extraction and class-aware region clustering for explainable tabular modeling"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Jose Carlos Del Valle" }
]
dependencies = [
  "scikit-learn",
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "openai",
  "scipy",
  "tqdm",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jcval94/InsideForest"
Repository = "https://github.com/jcval94/InsideForest.git"

[tool.setuptools.packages.find]
include = ["InsideForest*"]

[tool.setuptools.package-data]
"InsideForest.examples" = ["*.ipynb"]
